# civicreachdemo

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Engineering Case Study.md  Makefile  README.md  compose.yaml  pyproject.toml  setup-hooks  start.py
docs/: architecture.md
knowledge/: agent-disclaimer.md  manifest.json  nc-fns-general-requirements.md  nc-fns-gross-income-tests.md  nc-fns-how-to-apply.md  nc-fns-income-limits.md  nc-fns-overview.md  nc-fns-student-rules.md
programs/: conftest.py  registry.yaml
programs/ca-calfresh/: program.yaml
programs/ca-calfresh/knowledge/: calfresh-disclaimer.md  calfresh-how-to-apply.md  calfresh-income-limits.md  calfresh-overview.md  manifest.json
programs/ca-calfresh/rules/: 2025-10.yaml
programs/ca-calfresh/smoke/: adversarial.txt  happy.txt  individual.txt  injection.txt  net.txt  scenarios.yaml  student.txt
programs/ca-calfresh/tests/: test_eligibility.py  test_knowledge.py  test_rules.py  test_smoke_pack.py
programs/nc-fns/: program.yaml
programs/nc-fns/knowledge/: agent-disclaimer.md  manifest.json  nc-fns-general-requirements.md  nc-fns-income-limits-2024.md  nc-fns-income-limits-2026.md  nc-fns-income-limits.md
programs/nc-fns/rules/: 2024-10.yaml  2025-10.yaml  2026-10.yaml
programs/nc-fns/smoke/: adversarial.txt  happy.txt  individual.txt  injection.txt  net.txt  scenarios.yaml  student.txt
programs/nc-fns/tests/: test_eligibility.py  test_knowledge.py  test_rules.py  test_smoke_pack.py
scripts/: adversarial.txt  demo-scenarios.md  happy_path.txt  smoke_individual.txt  smoke_injection.txt  smoke_net.txt  smoke_student.txt
src/: __init__.py  api_client.py  cli.py  cli_display.py  cli_input.py  config.py  json_types.py  limits.py  logging_config.py  openai_errors.py  process_turn.py  session.py  smoke.py
src/api/: __init__.py  app.py  schemas.py
src/compose/: __init__.py  copy.py  grounding.py  response.py
src/eligibility/: __init__.py  engine.py  income.py  ruleset.py  thresholds.py
src/eligibility/modules/: __init__.py  base.py  elderly.py  gross_income.py  household_size.py  residency.py  student_soft.py
src/extraction/: __init__.py  extract.py  schema.py
src/llm/: __init__.py  client.py
src/planner/: __init__.py  missing.py
src/programs/: __init__.py  models.py  registry.py
src/retrieval/: __init__.py  chunking.py  embeddings.py  index.py  kb.py  qdrant_store.py  retrieve.py
src/safety/: __init__.py  checks.py
src/state/: __init__.py  clarify.py  models.py  updates.py
tests/: conftest.py  test_api.py  test_as_of_retrieve.py  test_chunking.py  test_clarify.py  test_cli.py  test_cli_display.py  test_cli_input.py  test_cli_picker.py  test_compose.py  test_compose_copy.py  test_compose_terminal.py  test_config.py  test_eligibility.py  test_grounding.py  test_index_sync.py  test_json_types.py  test_knowledge.py  test_openai_errors.py  test_planner.py  test_process_turn.py  test_process_turn_openai.py  test_program_isolation.py  test_programs.py  test_requirement_modules.py  test_retrieval.py  test_ruleset_pin.py  test_safety.py  test_schema.py  test_session.py  test_smoke.py  test_state.py
