[tool.poetry]
name = "nc-fns-eligibility-agent"
version = "0.1.0"
description = "POC AI eligibility screening agent for NC FNS (SNAP)"
authors = ["CivicReach Demo"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
openai = ">=1.40.0"
pydantic = ">=2.7.0"
pydantic-settings = ">=2.3.0"
python-dotenv = ">=1.0.0"
rich = ">=13.7.0"
fastapi = ">=0.115.0"
uvicorn = { version = ">=0.30.0", extras = ["standard"] }
redis = ">=5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
httpx = ">=0.27.0"
pre-commit = ">=3.7.0"
ruff = ">=0.12.0"
mypy = ">=1.10.0"
vulture = ">=2.11"

[tool.poetry.scripts]
fns-agent = "src.cli:main"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

# --- App / test runtime ---

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

# --- Quality gates (pre-commit / CI) ---

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
    "N",
    "PTH",
    "T20",
    "ARG",
    "ERA",
    "PLC",
    "PLE",
    "PLW",
    "ANN",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20", "ARG", "PLR", "ANN001", "ANN201", "ANN202", "ANN204"]
"start.py" = ["T20", "ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
files = ["src"]
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_any_explicit = true
disallow_any_unimported = true
disallow_subclassing_any = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
pretty = true
plugins = ["pydantic.mypy"]
mypy_path = "."
namespace_packages = true
explicit_package_bases = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.vulture]
min_confidence = 80
paths = ["src", "tests"]
exclude = [".venv", "*egg-info*"]
