[tool.poetry]
name = "civicreach-eligibility-agent"
version = "0.1.0"
description = "POC public-benefits eligibility agent (pluggable program packs)"
authors = ["CivicReach Demo"]
readme = "README.md"
packages = [{ include = "src" }]
# Program packs (rules + knowledge) live under programs/ and are COPYed into
# the Docker image separately; they are not Python packages.

[tool.poetry.dependencies]
python = "^3.11"
openai = ">=1.40.0"
pydantic = ">=2.7.0"
pydantic-settings = ">=2.3.0"
python-dotenv = ">=1.0.0"
rich = ">=13.7.0"
fastapi = ">=0.115.0"
uvicorn = { version = ">=0.30.0", extras = ["standard"] }
redis = ">=5.0.0"
qdrant-client = "1.15.1"
httpx2 = "^2.5.0"
pyyaml = "^6.0.3"
prompt-toolkit = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pre-commit = ">=3.7.0"
ruff = ">=0.12.0"
mypy = ">=1.10.0"
vulture = ">=2.11"
types-pyyaml = "^6.0.12.20260518"

[tool.poetry.scripts]
eligibility-agent = "src.cli:main"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

# --- App / test runtime ---

[tool.pytest.ini_options]
# Infrastructure tests + pack-local tests under programs/{slug}/tests/
testpaths = ["tests", "programs"]
python_files = ["test_*.py"]
pythonpath = ["."]
# Same basenames under each pack (test_rules.py, …) need importlib mode
addopts = ["--import-mode=importlib"]

# --- Quality gates (pre-commit / CI) ---

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "programs"]

[tool.ruff.lint]
# Imports: top of file only (PEP 8). E402 = module-level import after non-import
# code; PLC0415 = import inside a function/class (never lazy-import for style).
select = [
    "E",       # pycodestyle errors (incl. E402)
    "W",
    "F",
    "I",       # isort — top-level import order
    "B",
    "UP",
    "SIM",
    "RUF",
    "N",
    "PTH",
    "T20",
    "ARG",
    "ERA",
    "PLC",     # pylint convention (incl. PLC0415 import-outside-top-level)
    "PLC0415", # explicit: imports must be at module top level, not nested
    "PLE",
    "PLW",
    "ANN",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20", "ARG", "PLR", "ANN001", "ANN201", "ANN202", "ANN204"]
"programs/**/tests/**" = ["T20", "ARG", "PLR", "ANN001", "ANN201", "ANN202", "ANN204"]
"programs/conftest.py" = ["T20", "ANN"]
"start.py" = ["T20", "ANN"]
"src/smoke.py" = ["T20"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
files = ["src"]
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_any_explicit = true
disallow_any_unimported = true
disallow_subclassing_any = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
pretty = true
plugins = ["pydantic.mypy"]
mypy_path = "."
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "qdrant_client.*",
    "grpc.*",
    "numpy.*",
    "portalocker.*",
    "h2.*",
    "hyperframe.*",
    "hpack.*",
    "yaml",
    "yaml.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.vulture]
min_confidence = 80
paths = ["src", "tests", "programs"]
exclude = [".venv", "*egg-info*", "programs/**/knowledge/**", "programs/**/smoke/**"]
